<resources>
    <string name="app_name">MPM_StubMPM</string>
    <string name="title_activity_card">CardActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="repoUrl">https://github.com/pro100svitlo/Credit-Card-NFC-Reader#questions-and-help</string>
    <string name="tv_noNfc">There is no NFC module on this device</string>
    <string name="tv_tapYourCard">Please put your card to back panel of the phone</string>
    <string name="tv_tapYourCard_up">For Contactless Transaction\n Please Tap on TOP of the terminal</string>
    <string name="tv_tapYourCard_down">Insert Card Below</string>
    <string name="tv_tapYourCard_right">Card Swipe</string>
    <string name="ad_progressBar_title">Scanning ...</string>
    <string name="ad_progressBar_mess">Please do not remove or move card during reading.</string>
    <string name="snack_unknown_bank_card">This is unknown bank card. Please, go to my github repo!</string>
    <string name="snack_doNotMoveCard">Please do not move card, try again !</string>
    <string name="snack_unknownEmv">Unknown EMV card</string>
    <string name="snack_lockedNfcCard">NFC is locked on this card.</string>
    <string name="ad_nfcTurnOn_title">NFC is turned off.</string>
    <string name="ad_nfcTurnOn_message">You need turn on NFC module for scanning. Wish turn on it now?</string>
    <string name="ad_nfcTurnOn_pos">Turn on</string>
    <string name="ad_nfcTurnOn_neg">Dismiss</string>
    <string name="title_activity_swipe">SwipeActivity</string>
    <string name="stub_Version">MPM_STUB_</string>
</resources>