<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="10dp"

    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/version"
        android:layout_alignParentTop="true"
        android:text="gfgfghh"
        android:textColor="@color/colorBlack"
        android:textSize="16dp" />

    <EditText
        android:id="@+id/etText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="enter number"
android:visibility="gone"
        ></EditText>
    <Button
        android:id="@+id/btnTest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Check"
        android:layout_below="@+id/etText"

        ></Button>
    <TextView
        android:id="@android:id/candidatesArea"
        android:visibility="gone"
        style="@style/custom_tv"
        android:text="@string/tv_noNfc"
         android:layout_below="@+id/version"
        />
    <LinearLayout
        android:id="@+id/content_cardReady"
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:orientation="vertical"
        android:background="@drawable/card_bg"
        android:layout_marginBottom="16dp"
        android:paddingBottom="16dp"
        android:paddingLeft="32dp"
        android:paddingRight="16dp"
        android:paddingTop="16dp"
android:visibility="gone"
        >
        <TextView
            android:id="@+id/text3"
            style="@style/custom_tv"
            android:text=""
            android:layout_marginTop="20dp"
            />

        <TextView
            android:id="@android:id/text1"
            style="@style/custom_tv"
            android:text=""
            android:layout_marginTop="40dp"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            >
            <TextView
                android:id="@android:id/text2"
                style="@style/custom_tv"
                android:layout_weight="1"
                android:text=""
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                />
            <ImageView
                android:id="@android:id/icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="16dp"
                />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/llCardPayment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@+id/content_cardReady"
        android:visibility="gone"
        >
        <TextView
            android:id="@+id/txtPaymentVia"
            style="@style/custom_tv"
            android:gravity="center"
            android:textColor="@color/purple_500"
            android:text="Payment Via"
            android:visibility="gone"
            />
        <Button
            android:id="@+id/btnCardDebit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/llTop"
            android:layout_marginTop="20dp"
            android:text="VISA Debit Payment"
            android:background="#A9A9A9"
            android:paddingRight="60dp"
            android:paddingLeft="60dp"
            android:visibility="gone"
            ></Button>
        <Button
            android:id="@+id/btnBankDebit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/llTop"
            android:layout_marginTop="20dp"
            android:text="Bank Debit Payment"
            android:background="#A9A9A9"
            android:paddingRight="60dp"
            android:paddingLeft="60dp"
            android:visibility="gone"
            ></Button>
    </LinearLayout>

    <TextView
        android:id="@+id/btnCheque"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="CHEQUE"
        android:layout_centerInParent="true"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:layout_above="@+id/btnSaving"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginBottom="10dp"
        android:elevation="10dp"
        android:textStyle="bold"
        android:textSize="25dp"
        android:textColor="@color/colorWhite"
        android:background="@drawable/border_btn"
        android:gravity="center_horizontal"
        android:layout_marginTop="50dp"
        android:visibility="gone"
        ></TextView>

    <TextView
        android:id="@+id/btnSaving"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="SAVING"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginBottom="50dp"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/btnCancel"
        android:paddingLeft="30dp"
        android:elevation="10dp"
        android:paddingRight="30dp"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:textStyle="bold"
        android:textSize="25dp"
        android:gravity="center_horizontal"
        android:textColor="@color/colorWhite"
        android:background="@drawable/border_btn"
        android:layout_marginTop="10dp"
        android:visibility="gone"
        ></TextView>

    <TextView
        android:id="@+id/btnCancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="CANCEL"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginBottom="30dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:elevation="10dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:textStyle="bold"
        android:textSize="25dp"
        android:gravity="center_horizontal"
        android:textColor="@color/colorWhite"
        android:background="@drawable/border_btn_reds"
        android:layout_marginTop="20dp"
        android:visibility="gone"
        ></TextView>
    <TextView
        android:id="@+id/content_putCard"
        android:visibility="gone"
        style="@style/custom_tv"
        android:drawableTop="@mipmap/nfc_scan"
        android:gravity="center"
        android:textColor="@color/purple_200"
        android:text="@string/tv_tapYourCard"
        />
    <RelativeLayout
        android:id="@+id/rlTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/version"
        >
<LinearLayout
    android:id="@+id/content_up"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/content_up_txt"
        android:drawableTop="@mipmap/up_a"
        android:gravity="top|center_horizontal"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/colorBlue"
        android:text="@string/tv_tapYourCard_up"
        android:textStyle="bold"
        android:textSize="18dp"
        />
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/contactless"
        android:gravity="top|center_horizontal"
        android:layout_gravity="center_horizontal"
        ></ImageView>

</LinearLayout>
    <LinearLayout
        android:id="@+id/content_eftpos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:layout_centerHorizontal="true"
        >
        <ImageView
            android:layout_width="100dp"
            android:layout_height="80dp"
            android:src="@drawable/img_debit_eftpos"
            android:layout_gravity="center_horizontal"
            ></ImageView>
    </LinearLayout>
    </RelativeLayout>
    <LinearLayout
        android:id="@+id/content_amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/rlTop"
        android:layout_marginTop="20dp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/content_amount_txt"
            android:gravity="top|center_horizontal"
            android:textColor="@color/colorBlack"
            android:text="Amount"
            android:textStyle="bold"
            android:textSize="18dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/content_amount_value"
            android:gravity="top|center_horizontal"
            android:textColor="@color/colorBlack"
            android:layout_marginLeft="10dp"
            android:text="$XX.XXX"
            android:textStyle="bold"
            android:textSize="23dp"
            />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/content_down"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        >
        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@mipmap/insert"
            ></ImageView>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/content_down_txt"
        android:drawableBottom="@mipmap/down_a"
        android:gravity="end|bottom"
        android:textColor="@color/colorBlue"
        android:text="@string/tv_tapYourCard_down"
        android:layout_gravity="bottom"
        android:textStyle="bold"
        android:textSize="18dp"
        android:layout_marginBottom="5dp"
        />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/content_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"

        >
        <ImageView
            android:layout_width="80dp"
            android:layout_height="120dp"
            android:src="@mipmap/swipe_vert"
            android:gravity="top|center_horizontal"
            android:layout_gravity="right"
            ></ImageView>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/content_right_txt"
        android:drawableRight="@mipmap/right_a"
        android:gravity="right|center_vertical"
        android:textColor="@color/colorBlue"
        android:text="@string/tv_tapYourCard_right"
        android:textStyle="bold"
        android:textSize="18dp"

        />
    </LinearLayout>
    <TextView
        android:id="@+id/txtSwipe"
        android:layout_centerInParent="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Swipe Demo"
        android:padding="10dp"
        android:background="@drawable/border_btn"
        android:textColor="@color/colorWhite"
        android:visibility="gone"
        ></TextView>

</RelativeLayout>
